--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="clothes-gallery">
       <!-- Clothes Item 1 -->
       <div class="clothes-item">
-        <img src="clothes1.jpg" alt="Clothes 1" width="200px" height="200px">
+        <img src="Clothes1.jpg" alt="Clothes 1">
         <div class="cart-overlay">
          <a href="clothes.html"  class="add-to-cart">Add to Cart</a>
           <span class="price">R100.00</span>
